# ai-ml-evaluation-studio

./: README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sample_churn.csv  sample_house.csv
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_ml_catalogs.py  0003_evaluation_profiles.py  0004_pipeline_kind.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  catalog.py  datasets.py  experiments.py  jobs.py  model_runs.py
backend/app/core/: celery_app.py  config.py  roles.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  catalog.py  dataset.py  experiment.py  inference.py  job.py
backend/app/services/: evaluation_profile_service.py  evaluation_service.py  explanation_service.py  inference_service.py  job_service.py  model_registry.py  pipeline_registry.py  profiling_service.py  recommendation_service.py  storage_service.py  training_service.py  validation_service.py
backend/app/services/trainers/: __init__.py  tabular_sklearn.py
backend/app/workers/: tasks.py
backend/scripts/: seed_ml_catalog.py  seed_superadmin.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/hooks/: use-job-polling.ts
frontend/src/lib/: config.ts  csv-preflight.ts  csv-preview.ts
frontend/src/lib/api/: auth.ts  (+6 more)
frontend/src/providers/: app-providers.tsx
frontend/src/types/: api.ts
(+32 files in other folders)
