[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "boto3>=1.43.19",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.30",
    "redis>=8.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true